--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
                   especializado, compras fáceis e entregas rápidas.</h4>
 
                 <div class="icons-redes">
-                  <a href="https://web.whatsapp.com/send?phone=55085999338238"></a><img src="https://cdn-icons-png.flaticon.com/128/15455/15455957.png" alt=""></a>
+                  <a href="https://whatsapp.com/send?phone=55085999338238"></a><img src="https://cdn-icons-png.flaticon.com/128/15455/15455957.png" alt=""></a>
                   <a href="https://www.instagram.com/joaopedro_06/"><img src="https://cdn.icon-icons.com/icons2/792/PNG/96/INSTAGRAM_icon-icons.com_65535.png" alt=""></a>
                   <a href=""><img src="https://cdn-icons-png.flaticon.com/128/10092/10092202.png" alt=""></a>
                   <a href="https://github.com/JoaoPedro006?tab=repositories"><img src="https://cdn.icon-icons.com/icons2/792/PNG/96/GITHUB_icon-icons.com_65553.png" alt=""></a>
