--- a/index.html
+++ b/index.html
@@ -197,8 +197,8 @@
       <div class="tela-1">
         <h1>#SouEmpresa</h1>
         <h3>VENHA CONHECER NOSSOS PLANOS PARA SUA LOJA</h3>
-        <button>PREÇO VAREJO</button>
-        <button>PREÇO ATACADO</button>
+        <button class="bb1">PREÇO VAREJO</button>
+        <button class="bb1">PREÇO ATACADO</button>
 
         <div class="buttons-logar">
           <button>Cadastrar-se</button>
@@ -210,8 +210,8 @@
       <div class="tela-2">
         <h1>#SouCliente</h1>
         <h3>CLIQUE AQUI PARA RECEBER AS NOVIDADES</h3>
-        <p><button>RECEBER POR E-mail</button><img src="https://cdn-icons-png.flaticon.com/128/5968/5968534.png" alt="" style="width: 20px;"></p>
-        <p><button>RECEBER POR Wattsapp</button><img src="https://cdn.icon-icons.com/icons2/1645/PNG/96/whatsapp_109861.png" alt="" style="width: 20px;"></p>
+        <p><button class="bb1">RECEBER POR E-mail</button><img src="https://cdn-icons-png.flaticon.com/128/5968/5968534.png" alt="" style="width: 20px;"></p>
+        <p><button class="bb1">RECEBER POR Wattsapp</button><img src="https://cdn.icon-icons.com/icons2/1645/PNG/96/whatsapp_109861.png" alt="" style="width: 20px;"></p>
         
         <div class="buttons-logar">
           <button>Cadastrar-se</button>
