--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
       <section class="section-1">
         <div class="h1">
           <img src="images/logo-music.png" 
-          alt="ef" style="width: 400px;">
-        </div><!--h1-->
+          alt="ef" class="img-sec1" >
+        </div>
 
         <div class="h3">
           <h3>Encontre Seu Som Perfeito!</h3>
@@ -67,12 +67,13 @@
 
         <div class="icon-fixo">
           <button>
-          <img src="https://cdn.icon-icons.com/icons2/1645/PNG/96/whatsapp_109861.png" alt="">
+          <a href="https://wa.me/5585999338238" target="_blank">
+          <img src="https://cdn.icon-icons.com/icons2/1645/PNG/96/whatsapp_109861.png" alt=""> 
+          </a>
           </button>
         </div>
       </section>
     </div>
-    <!--ajuste-sec-->
 
     <section class="section-2 flex">
       <div class="marcas-pai flex" id="sobre">
@@ -155,7 +156,7 @@
                   especializado, compras fáceis e entregas rápidas.</h4>
 
                 <div class="icons-redes">
-                  <a href="https://whatsapp.com/send?phone=55085999338238"></a><img src="https://cdn-icons-png.flaticon.com/128/15455/15455957.png" alt=""></a>
+                  <a href="https://wa.me/55085999338238"></a><img src="https://cdn-icons-png.flaticon.com/128/15455/15455957.png" alt=""></a>
                   <a href="https://www.instagram.com/joaopedro_06/"><img src="https://cdn.icon-icons.com/icons2/792/PNG/96/INSTAGRAM_icon-icons.com_65535.png" alt=""></a>
                   <a href=""><img src="https://cdn-icons-png.flaticon.com/128/10092/10092202.png" alt=""></a>
                   <a href="https://github.com/JoaoPedro006?tab=repositories"><img src="https://cdn.icon-icons.com/icons2/792/PNG/96/GITHUB_icon-icons.com_65553.png" alt=""></a>
@@ -246,7 +247,7 @@
         <p>
           <img src="https://cdn-icons-png.flaticon.com/128/15455/15455957.png" alt="link" />
           <a
-          href="https://web.whatsapp.com/send?phone=55085999338238" target="_blank">(85)99933-8238</a>        </p>
+          href="https://wa.me/55085999338238" target="_blank">(85)99933-8238</a>        </p>
         <p>
           <img src="https://cdn.icon-icons.com/icons2/792/PNG/96/GITHUB_icon-icons.com_65553.png" alt="link" />
           <a href="https://github.com/JoaoPedro006?tab=repositories">Github: joaopedro006</a>
@@ -262,7 +263,7 @@
         <p>
           <img src="https://cdn-icons-png.flaticon.com/128/15455/15455957.png" alt="link" />
           <a
-          href="https://web.whatsapp.com/send?phone=55085999338238" target="_blank">(85)99933-8238</a>        </p>
+          href="https://wa.me/55085999338238" target="_blank">(85)99933-8238</a>        </p>
         <p>
           <img src="https://cdn.icon-icons.com/icons2/792/PNG/96/GITHUB_icon-icons.com_65553.png" alt="link" />
           <a href="https://github.com/JoaoPedro006?tab=repositories">Github: joaopedro006</a>
@@ -278,6 +279,7 @@
   <div class="footer-parte-2">
     <h5>eSport Villains &copy; desenvolvido por João Pedro</h5>
   </div>
+  
 
     <script src="js/myjs.js"></script>
   </body>
